# Dossier

./: .gitignore  README.md  pyproject.toml  run.py
examples/: sample_case.json  sample_case.md  sample_report.docx
packaging/: Dossier.spec  README.md  dossier_app.py
src/dossier/: __init__.py  __main__.py  app.py  case.py  models.py
src/dossier/collectors/: __init__.py  base.py  courtlistener.py  email.py  github.py  keybase.py  metadata.py  searchkit.py  sec.py  usernames.py
src/dossier/report/: __init__.py  render.py  templates.py
src/dossier/ui/: __init__.py  export.py  report_editor.py  window.py
tests/: conftest.py  test_case.py  test_collectors_live.py  test_data_collectors.py  test_email.py  test_metadata.py  test_models.py  test_report.py  test_report_editor.py  test_searchkit.py  test_templates.py  test_ui.py  test_usernames.py  test_usernames_live.py
